--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "todo16v3",
+  "name": "todo",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://Angelina.github.io/todo",
   "dependencies": {
     "@emotion/react": "11.10.5",
     "@emotion/styled": "11.10.5",
@@ -17,6 +18,7 @@
     "@types/react-redux": "7.1.24",
     "axios": "1.1.3",
     "formik": "^2.2.9",
+    "gh-pages": "^5.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-redux": "8.0.4",
@@ -31,7 +33,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
